--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
   </header>
-  <main>
+  <main class="mainindex">
     <div id="carouselExampleInterval" class="carousel slide portada" data-bs-ride="carousel">
 
       <div class="carousel-inner">
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <section>
+    <section class="sectionindex">
       <h2 class="conjunto">Llevate un conjunto completo!</h2>
       <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto">
       <img class="fotoconjunto2" src="./img/conjunto2.jpg" alt="conjunto2">
