--- a/pages/producto.html
+++ b/pages/producto.html
@@ -37,13 +37,13 @@
             <p class="preciomasterpiece">65.990 $</p>
         </div>
 
-        <div> </div><img class="card" src="../img/pantalon.JPG" alt="pantalon">
+        <div> </div><img class="card " src="../img/pantalon.JPG" alt="pantalon">
         <p class="active1">Pantalon Active</p>
         <p class="precioactive">110.000 $</p>
         </div>
 
 
-        <div><img class="card" src="../img/zapatillas.JPG" alt="zapatillas">
+        <div><img class="card zapatillas1" src="../img/zapatillas.JPG" alt="zapatillas">
             <p class="denver">Zapatillas Denver</p>
             <p class="preciodenver">61.250 $</p>
         </div>
@@ -56,11 +56,11 @@
                 <p class="freres">Remera Freres</p>
                 <p class="preciofreres">72.500 $</p>
 
-                <div><img class="card pantalon2" src="../img/pantalon2.JPG" alt="remera2">
+                <div><img class="card pantalon2" src="../img/pantalon2.JPG" alt="pantalon2">
                     <p class="vintage">Pantalon Vintage</p>
                     <p class="preciovintage">90.500 $</p>
 
-                    <div><img class="card zapatillas2" src="../img/zapatillas2.JPG" alt="remera2">
+                    <div><img class="card zapatillas2" src="../img/zapatillas2.JPG" alt="zapatillas2">
                         <p class="peggy">Zapatillas Peggy</p>
                         <p class="preciopeggy"> 45.500 $</p>
 
