--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       </div>
     </div>
     <section class="sectionindex">
-      <h2 class="conjunto">Llevate un conjunto completo!</h2>
+      <h2 class="conjunto cambio">Llevate un conjunto completo!</h2>
       <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto">
-      <img class="fotoconjunto2" src="./img/conjunto2.jpg" alt="conjunto2">
+      <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="conjunto2">
       <h3 class="dark">DARK VERIFIED</h3>
       <h4 class="precioconjunto">$130.980,00</h4>
       <h3 class="light">LIGHT VERIFIED</h3>
