--- a/pages/producto.html
+++ b/pages/producto.html
@@ -27,40 +27,40 @@
         </div>
     </header>
     <main class="container">
-        <div><img class="card" src="../img/buzo.JPG" alt="buzo">
+        <div><img class="card grad1" src="../img/buzo.JPG" alt="buzo">
             <p class="rockstar">Buzo Rockstar Black</p>
             <p class="preciorockstar">114.980 $</p>
         </div>
 
-        <div><img class="card" src="../img/remera.JPG" alt="remera">
+        <div><img class="card grad1" src="../img/remera.JPG" alt="remera">
             <p class="masterpiece">Remera Masterpiece Black </p>
             <p class="preciomasterpiece">65.990 $</p>
         </div>
 
-        <div> </div><img class="card " src="../img/pantalon.JPG" alt="pantalon">
+        <div> </div><img class="card grad1" src="../img/pantalon.JPG" alt="pantalon">
         <p class="active1">Pantalon Active</p>
         <p class="precioactive">110.000 $</p>
         </div>
 
 
-        <div><img class="card zapatillas1" src="../img/zapatillas.JPG" alt="zapatillas">
+        <div><img class="card zapatillas1 grad1" src="../img/zapatillas.JPG" alt="zapatillas">
             <p class="denver">Zapatillas Denver</p>
             <p class="preciodenver">61.250 $</p>
         </div>
 
-        <div><img class="card buzo2" src="../img/buzo2.JPG" alt="buzo2">
+        <div><img class="card buzo2 grad1" src="../img/buzo2.JPG" alt="buzo2">
             <p class="kieeh">Buzo Kieeh White</p>
             <p class="preciokieeh">79.990 $</p>
 
-            <div><img class="card remera2" src="../img/remera2.JPG" alt="remera2">
+            <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera2">
                 <p class="freres">Remera Freres</p>
                 <p class="preciofreres">72.500 $</p>
 
-                <div><img class="card pantalon2" src="../img/pantalon2.JPG" alt="pantalon2">
+                <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon2">
                     <p class="vintage">Pantalon Vintage</p>
                     <p class="preciovintage">90.500 $</p>
 
-                    <div><img class="card zapatillas2" src="../img/zapatillas2.JPG" alt="zapatillas2">
+                    <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas2">
                         <p class="peggy">Zapatillas Peggy</p>
                         <p class="preciopeggy"> 45.500 $</p>
 
