alt y fotos optimizadas

--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pedido</title>
+    <title>Kibua_Pedido</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/logo.png" alt="kibua" width="150px">
+        <img class="logo" src="../img/logo.png" alt="logo" width="150px">
         <div>
             <img class="carrito" src="../img/carrito.JPG" alt="carrito">
         </div>
