--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PreEntrega 3</title>
+  <title>Kibua_Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <img class="logo" src="./img/logo.png" alt="kibua" width="150px">
+    <img class="logo" src="./img/logo.png" alt="logo" width="150px">
     <div>
       <img class="carrito" src="./img/carrito.JPG" alt="carrito">
     </div>
@@ -38,13 +38,13 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-          <img src="./img/banner2.png" class="d-block w-100" alt="banners">
+          <img src="./img/banner1.jpg" class="d-block w-100" alt="banners">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/banner1.png" class="d-block w-100" alt="banners">
+          <img src="./img/banner2.jpg" class="d-block w-100" alt="banners">
         </div>
         <div class="carousel-item">
-          <img src="./img/banner3.png" class="d-block w-100" alt="banners">
+          <img src="./img/banner3.jpg" class="d-block w-100" alt="banners">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -76,8 +76,8 @@
     </div>
     <section class="sectionindex">
       <h2 class="conjunto cambio">Llevate un conjunto completo!</h2>
-      <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto">
-      <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="conjunto2">
+      <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto_dark">
+      <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="conjunto_light">
       <h3 class="dark">DARK VERIFIED</h3>
       <h4 class="precioconjunto">$130.980,00</h4>
       <h3 class="light">LIGHT VERIFIED</h3>
