--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,12 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
-  <title>Contacto</title>
+  <title>Kibua_Contacto</title>
 </head>
 
 <body>
   <header class="headercontacto">
-    <img class="logo" src="../img/logo.png" alt="kibua" width="150px">
+    <img class="logo" src="../img/logo.png" alt="logo" width="150px">
     <div>
       <img class="carrito" src="../img/carrito.JPG" alt="carrito">
     </div>
