--- a/pages/producto.html
+++ b/pages/producto.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Productos</title>
+    <title>Kibua_Productos</title>
 </head>
 
 <body class="productos2">
     <header>
-        <img class="logo" src="../img/logo.png" alt="kibua" width="150px">
+        <img class="logo" src="../img/logo.png" alt="logo" width="150px">
         <div>
             <img class="carrito" src="../img/carrito.JPG" alt="carrito">
         </div>
@@ -27,40 +27,40 @@
         </div>
     </header>
     <main class="container">
-        <div><img class="card grad1" src="../img/buzo.JPG" alt="buzo">
+        <div><img class="card grad1" src="../img/buzo.JPG" alt="buzo_rockstar">
             <p class="rockstar">Buzo Rockstar Black</p>
             <p class="preciorockstar">114.980 $</p>
         </div>
 
-        <div><img class="card grad1" src="../img/remera.JPG" alt="remera">
+        <div><img class="card grad1" src="../img/remera.JPG" alt="remera_masterpiece">
             <p class="masterpiece">Remera Masterpiece Black </p>
             <p class="preciomasterpiece">65.990 $</p>
         </div>
 
-        <div> </div><img class="card grad1" src="../img/pantalon.JPG" alt="pantalon">
+        <div> </div><img class="card grad1" src="../img/pantalon.JPG" alt="pantalon_active">
         <p class="active1">Pantalon Active</p>
         <p class="precioactive">110.000 $</p>
         </div>
 
 
-        <div><img class="card zapatillas1 grad1" src="../img/zapatillas.JPG" alt="zapatillas">
+        <div><img class="card zapatillas1 grad1" src="../img/zapatillas.JPG" alt="zapatillas_denver">
             <p class="denver">Zapatillas Denver</p>
             <p class="preciodenver">61.250 $</p>
         </div>
 
-        <div><img class="card buzo2 grad1" src="../img/buzo2.JPG" alt="buzo2">
+        <div><img class="card buzo2 grad1" src="../img/buzo2.JPG" alt="buzo_kieeh">
             <p class="kieeh">Buzo Kieeh White</p>
             <p class="preciokieeh">79.990 $</p>
 
-            <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera2">
+            <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera_freres">
                 <p class="freres">Remera Freres</p>
                 <p class="preciofreres">72.500 $</p>
 
-                <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon2">
+                <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon_vintage">
                     <p class="vintage">Pantalon Vintage</p>
                     <p class="preciovintage">90.500 $</p>
 
-                    <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas2">
+                    <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas_peggy">
                         <p class="peggy">Zapatillas Peggy</p>
                         <p class="preciopeggy"> 45.500 $</p>
 
