agregue meta description y keywords

--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Realiza tu pedido fácilmente y recibí tu ropa oversize favorita en la puerta de tu casa. Proceso rápido, seguro y con envíos a todo el país.">
+    <meta name="keywords"
+        content="hacer pedido ropa oversize, comprar ropa online, pedido ropa cómoda, envío ropa oversize, comprar remeras, comprar pantalones grandes, moda online, pago seguro ropa">
+
     <title>Kibua_Pedido</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
