--- a/pages/producto.html
+++ b/pages/producto.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Encontra tu estilo perfecto con nuestra colección de ropa oversize. Diseños modernos, calidad excepcional y tallas cómodas para todos los gustos.">
+    <meta name="keywords"
+        content="ropa oversize, productos oversize, remeras grandes, pantalones oversize, ropa cómoda, moda para todos, prendas oversize, ropa estilo amplio">
+
     <link rel="stylesheet" href="../css/style.css">
     <title>Kibua_Productos</title>
 </head>
