--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Descubri la mejor colección de ropa oversize para un estilo cómodo y moderno. Encontra remeras, buzos, pantalones y más con diseños únicos y tendencias actuales.">
+  <meta name="keywords"
+    content="ropa oversize, moda oversize, remeras grandes, pantalones anchos, zapatillas, estilo oversize">
+
   <title>Kibua_Inicio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
