--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="¿Tenes preguntas? Contáctanos para resolver tus dudas o recibir asesoramiento sobre nuestra ropa y/o envios. Estamos aca para ayudarte.">
+  <meta name="keywords"
+    content="contacto tienda ropa oversize, atención al cliente, preguntas ropa online, soporte tienda moda, contacto rápido, dudas sobre productos oversize, ayuda tienda ropa">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
@@ -61,7 +66,7 @@
       <div class="col-md-6 p-4 ps-md-0">
         <h5 class="mt-0 textoinstagram2">Nuestro instagram</h5>
         <p>Seguinos para enterarte de las novedades.</p>
-        <a href="https://www.instagram.com/kibuamdq/" class="btn btn-primary stretched-link">Ir</a>
+        <a href="https://www.instagram.com/kibuamdq/" target="_blank" class="btn btn-primary stretched-link">Ir</a>
       </div>
     </div>
     <div class="row g-0 bg-body-secondary position-relative facebook2">
@@ -71,7 +76,8 @@
       <div class="col-md-6 p-4 ps-md-0 ">
         <h5 class="mt-0 textofacebook2">Nuestro facebook</h5>
         <p>Seguinos para enterarte de las novedades.</p>
-        <a href="https://www.facebook.com/p/Kibua-100063864442548/" class="btn btn-primary stretched-link">Ir</a>
+        <a href="https://www.facebook.com/p/Kibua-100063864442548/" target="_blank"
+          class="btn btn-primary stretched-link">Ir</a>
       </div>
     </div>
   </section>
