agrego los div que faltaban

--- a/pages/producto.html
+++ b/pages/producto.html
@@ -56,18 +56,22 @@
         <div><img class="card buzo2 grad1" src="../img/buzo2.JPG" alt="buzo_kieeh">
             <p class="kieeh">Buzo Kieeh White</p>
             <p class="preciokieeh">79.990 $</p>
+        </div>
 
-            <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera_freres">
-                <p class="freres">Remera Freres</p>
-                <p class="preciofreres">72.500 $</p>
+        <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera_freres">
+            <p class="freres">Remera Freres</p>
+            <p class="preciofreres">72.500 $</p>
+        </div>
 
-                <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon_vintage">
-                    <p class="vintage">Pantalon Vintage</p>
-                    <p class="preciovintage">90.500 $</p>
+        <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon_vintage">
+            <p class="vintage">Pantalon Vintage</p>
+            <p class="preciovintage">90.500 $</p>
+        </div>
 
-                    <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas_peggy">
-                        <p class="peggy">Zapatillas Peggy</p>
-                        <p class="preciopeggy"> 45.500 $</p>
+        <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas_peggy">
+            <p class="peggy">Zapatillas Peggy</p>
+            <p class="preciopeggy"> 45.500 $</p>
+        </div>
 
 
 
