--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="container text-center">
+    <div class="container2 text-center">
       <div class="row align-items-center">
         <div class="col  columnas">
           Envios gratis
