--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <header class="headercontacto">
+  <header class="header">
     <img class="logo" src="../img/logo.png" alt="logo" width="150px">
     <div>
       <img class="carrito" src="../img/carrito.JPG" alt="carrito">
