--- a/pages/producto.html
+++ b/pages/producto.html
@@ -19,69 +19,69 @@
         <div>
             <img class="carrito" src="../img/carrito.JPG" alt="carrito">
         </div>
-        <div>
-            <nav>
-                <ul>
-                    <li> <a href="../index.html" class="seccion">Inicio</a> </li>
-                    <li> <a href="../pages/producto.html" class="seccion">Productos</a> </li>
-                    <li> <a href="../pages/nosotros.html" class="seccion">Nosotros</a> </li>
-                    <li> <a href="../pages/contacto.html" class="seccion">Contacto</a> </li>
-                    <li> <a href="../pages/pedido.html" class="seccion">Seguí tu pedido</a> </li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html" class="seccion">Inicio</a></li>
+                <li><a href="../pages/producto.html" class="seccion">Productos</a></li>
+                <li><a href="../pages/nosotros.html" class="seccion">Nosotros</a></li>
+                <li><a href="../pages/contacto.html" class="seccion">Contacto</a></li>
+                <li><a href="../pages/pedido.html" class="seccion">Seguí tu pedido</a></li>
+            </ul>
+        </nav>
     </header>
     <main class="container">
-        <div><img class="card grad1" src="../img/buzo.JPG" alt="buzo_rockstar">
-            <p class="rockstar">Buzo Rockstar Black</p>
-            <p class="preciorockstar">114.980 $</p>
+        <div class="product">
+            <img class="card" src="../img/buzo.JPG" alt="buzo">
+            <p class="product-name">Buzo Rockstar Black</p>
+            <p class="product-price">114.980 $</p>
         </div>
 
-        <div><img class="card grad1" src="../img/remera.JPG" alt="remera_masterpiece">
-            <p class="masterpiece">Remera Masterpiece Black </p>
-            <p class="preciomasterpiece">65.990 $</p>
+        <div class="product">
+            <img class="card" src="../img/remera.JPG" alt="remera">
+            <p class="product-name">Remera Masterpiece Black</p>
+            <p class="product-price">65.990 $</p>
         </div>
 
-        <div> </div><img class="card grad1" src="../img/pantalon.JPG" alt="pantalon_active">
-        <p class="active1">Pantalon Active</p>
-        <p class="precioactive">110.000 $</p>
+        <div class="product">
+            <img class="card" src="../img/pantalon.JPG" alt="pantalon">
+            <p class="product-name">Pantalon Active</p>
+            <p class="product-price">110.000 $</p>
         </div>
 
-
-        <div><img class="card zapatillas1 grad1" src="../img/zapatillas.JPG" alt="zapatillas_denver">
-            <p class="denver">Zapatillas Denver</p>
-            <p class="preciodenver">61.250 $</p>
+        <div class="product">
+            <img class="card" src="../img/zapatillas.JPG" alt="zapatillas">
+            <p class="product-name">Zapatillas Denver</p>
+            <p class="product-price">61.250 $</p>
         </div>
 
-        <div><img class="card buzo2 grad1" src="../img/buzo2.JPG" alt="buzo_kieeh">
-            <p class="kieeh">Buzo Kieeh White</p>
-            <p class="preciokieeh">79.990 $</p>
+        <div class="product">
+            <img class="card" src="../img/buzo2.JPG" alt="buzo2">
+            <p class="product-name">Buzo Kieeh White</p>
+            <p class="product-price">79.990 $</p>
         </div>
 
-        <div><img class="card remera2 grad1" src="../img/remera2.JPG" alt="remera_freres">
-            <p class="freres">Remera Freres</p>
-            <p class="preciofreres">72.500 $</p>
+        <div class="product">
+            <img class="card" src="../img/remera2.JPG" alt="remera2">
+            <p class="product-name">Remera Freres</p>
+            <p class="product-price">72.500 $</p>
         </div>
 
-        <div><img class="card pantalon2 grad1" src="../img/pantalon2.JPG" alt="pantalon_vintage">
-            <p class="vintage">Pantalon Vintage</p>
-            <p class="preciovintage">90.500 $</p>
+        <div class="product">
+            <img class="card" src="../img/pantalon2.JPG" alt="pantalon2">
+            <p class="product-name">Pantalon Vintage</p>
+            <p class="product-price">90.500 $</p>
         </div>
 
-        <div><img class="card zapatillas2 grad1" src="../img/zapatillas2.JPG" alt="zapatillas_peggy">
-            <p class="peggy">Zapatillas Peggy</p>
-            <p class="preciopeggy"> 45.500 $</p>
+        <div class="product">
+            <img class="card" src="../img/zapatillas2.JPG" alt="zapatillas2">
+            <p class="product-name">Zapatillas Peggy</p>
+            <p class="product-price">45.500 $</p>
         </div>
-
-
-
     </main>
-    <footer class="footerproducto">
+    <footer>
         <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
         <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
-    </footer>
-
-
+      </footer>
 </body>
 
 </html>
