--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -59,8 +59,8 @@
             esta en ninguna de ellas, escribinos a nuestro whatsapp 223 683-1373 así podemos ayudarte.
         </p>
     </main>
-    <footer class="footerpedido">
-        <h3>© Kibua - 2024. Defensa de las y los consumidores.</h3>
+    <footer>
+        <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
         <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
     </footer>
 </body>
