--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -60,7 +60,7 @@
         </p>
     </main>
     <footer>
-        <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
+        <h3 class="textofooter footerpedido">© Kibua - 2024. Defensa de las y los consumidores.</h3>
         <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
     </footer>
 </body>
