--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto_dark">
       <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="conjunto_light">
       <h3 class="dark">DARK VERIFIED</h3>
-      <h4 class="precioconjunto">$130.980,00</h4>
+      <h4 class="precioconjunto precios">$130.980,00</h4>
       <h3 class="light">LIGHT VERIFIED</h3>
       <h4 class="precioconjunto2">$134.980,00</h4>
     </section>
