--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -53,7 +53,7 @@
 
             <br>
             Si ya sabes tu número de seguimiento hacé <a class="enlacepedido"
-                href="https://www.correoargentino.com.ar/formularios/e-commerce">click aquí </a>para rastrear tu pedido.
+                href="https://www.correoargentino.com.ar/formularios/e-commerce" target="_blank">click aquí </a>para rastrear tu pedido.
             <br>
             Si no recibiste un mail con tu número de seguimiento, chequea la casilla de "No deseado" o "Spam". Si no
             esta en ninguna de ellas, escribinos a nuestro whatsapp 223 683-1373 así podemos ayudarte.
