--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body>
   <header>
-    <img class="logo" src="./img/logo.png" alt="logo" width="150px">
+    <img class="logo" src="./img/logo.png" alt="Logo" width="150px">
     <div>
-      <img class="carrito" src="./img/carrito.JPG" alt="carrito">
+      <img class="carrito" src="./img/carrito.JPG" alt="Carrito de compras">
     </div>
     <div>
       <nav>
@@ -43,13 +43,13 @@
 
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="2000">
-          <img src="./img/banner1.jpg" class="d-block w-100" alt="banners">
+          <img src="./img/banner1.jpg" class="d-block w-100" alt="Banners">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/banner2.jpg" class="d-block w-100" alt="banners">
+          <img src="./img/banner2.jpg" class="d-block w-100" alt="Banners">
         </div>
         <div class="carousel-item">
-          <img src="./img/banner3.jpg" class="d-block w-100" alt="banners">
+          <img src="./img/banner3.jpg" class="d-block w-100" alt="Banners">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
@@ -81,8 +81,8 @@
     </div>
     <section class="sectionindex">
       <h2 class="conjunto cambio">Llevate un conjunto completo!</h2>
-      <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="conjunto_dark">
-      <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="conjunto_light">
+      <img class="fotoconjunto" src="./img/fotoconjunto.jpg" alt="Conjunto Dark">
+      <img class="fotoconjunto2 " src="./img/conjunto2.jpg" alt="Conjunto Light">
       <h3 class="dark">DARK VERIFIED</h3>
       <h4 class="precioconjunto precios">$130.980,00</h4>
       <h3 class="light">LIGHT VERIFIED</h3>
@@ -92,7 +92,7 @@
 
   <footer>
     <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
-    <img class="tarjetas" src="./img/tarjetas.JPG" alt="tarjetas">
+    <img class="tarjetas" src="./img/tarjetas.JPG" alt="Tarjetas Bancarias">
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
