--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -17,9 +17,9 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/logo.png" alt="logo" width="150px">
+        <img class="logo" src="../img/logo.png" alt="Logo" width="150px">
         <div>
-            <img class="carrito" src="../img/carrito.JPG" alt="carrito">
+            <img class="carrito" src="../img/carrito.JPG" alt="Carrito de compras">
         </div>
         <div>
             <nav>
@@ -72,7 +72,7 @@
     </main>
     <footer>
         <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
-        <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
+        <img class="tarjetas" src="../img/tarjetas.JPG" alt="Tarjetas Bancarias">
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
