--- a/pages/pedido.html
+++ b/pages/pedido.html
@@ -23,9 +23,9 @@
 
 <body>
     <header>
-        <img class="logo" src="../img/logo.png" alt="logo" width="150px">
+        <img class="logo" src="../img/logo.png" alt="Logo" width="150px">
         <div>
-            <img class="carrito" src="../img/carrito.JPG" alt="carrito">
+            <img class="carrito" src="../img/carrito.JPG" alt="Carrito de compras">
         </div>
         <div>
             <nav>
@@ -46,7 +46,7 @@
             <h1 class="seguipedido">Seguí tu pedido</h1>
         </div>
         <div>
-            <img class="fotopedido" src="../img/fotopedido.jpg" alt="fotopedido">
+            <img class="fotopedido" src="../img/fotopedido.jpg" alt="Conjunto Oversize">
         </div>
         <p class="textopedido">
             Una vez que tu compra esté en camino, te va a estar llegando el número de seguimiento vía mail.
@@ -61,7 +61,7 @@
     </main>
     <footer>
         <h3 class="textofooter footerpedido">© Kibua - 2024. Defensa de las y los consumidores.</h3>
-        <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
+        <img class="tarjetas" src="../img/tarjetas.JPG" alt="Tarjetas Bancarias">
     </footer>
 </body>
 
