--- a/pages/producto.html
+++ b/pages/producto.html
@@ -15,9 +15,9 @@
 
 <body class="productos2">
     <header>
-        <img class="logo" src="../img/logo.png" alt="logo" width="150px">
+        <img class="logo" src="../img/logo.png" alt="Logo" width="150px">
         <div>
-            <img class="carrito" src="../img/carrito.JPG" alt="carrito">
+            <img class="carrito" src="../img/carrito.JPG" alt="Carrito de compras">
         </div>
         <nav>
             <ul>
@@ -31,56 +31,56 @@
     </header>
     <main class="container">
         <div class="product">
-            <img class="card" src="../img/buzo.JPG" alt="buzo">
+            <img class="card" src="../img/buzo.JPG" alt="Buzo Rockstar">
             <p class="product-name">Buzo Rockstar Black</p>
             <p class="product-price">114.980 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/remera.JPG" alt="remera">
+            <img class="card" src="../img/remera.JPG" alt="Remera Masterpiece">
             <p class="product-name">Remera Masterpiece Black</p>
             <p class="product-price">65.990 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/pantalon.JPG" alt="pantalon">
+            <img class="card" src="../img/pantalon.JPG" alt="Pantalon Active">
             <p class="product-name">Pantalon Active</p>
             <p class="product-price">110.000 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/zapatillas.JPG" alt="zapatillas">
+            <img class="card" src="../img/zapatillas.JPG" alt="Zapatillas Denver">
             <p class="product-name">Zapatillas Denver</p>
             <p class="product-price">61.250 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/buzo2.JPG" alt="buzo2">
+            <img class="card" src="../img/buzo2.JPG" alt="Buzo Kieeh">
             <p class="product-name">Buzo Kieeh White</p>
             <p class="product-price">79.990 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/remera2.JPG" alt="remera2">
+            <img class="card" src="../img/remera2.JPG" alt="Remera Freres">
             <p class="product-name">Remera Freres</p>
             <p class="product-price">72.500 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/pantalon2.JPG" alt="pantalon2">
+            <img class="card" src="../img/pantalon2.JPG" alt="Pantalon Vintage">
             <p class="product-name">Pantalon Vintage</p>
             <p class="product-price">90.500 $</p>
         </div>
 
         <div class="product">
-            <img class="card" src="../img/zapatillas2.JPG" alt="zapatillas2">
+            <img class="card" src="../img/zapatillas2.JPG" alt="Zapatillas Peggy">
             <p class="product-name">Zapatillas Peggy</p>
             <p class="product-price">45.500 $</p>
         </div>
     </main>
     <footer>
         <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
-        <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
+        <img class="tarjetas" src="../img/tarjetas.JPG" alt="Tarjetas Bancarias ">
     </footer>
 </body>
 
