--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,9 +17,9 @@
 
 <body>
   <header class="header">
-    <img class="logo" src="../img/logo.png" alt="logo" width="150px">
+    <img class="logo" src="../img/logo.png" alt="Logo" width="150px">
     <div>
-      <img class="carrito" src="../img/carrito.JPG" alt="carrito">
+      <img class="carrito" src="../img/carrito.JPG" alt="Carrito de compras">
     </div>
     <div>
       <nav>
@@ -61,7 +61,7 @@
   <section>
     <div class="row g-0 bg-body-secondary position-relative instagram2">
       <div class="col-md-6 mb-md-0 p-md-4">
-        <img src="../img/instagram2.jfif" class="w-100" alt="instagram">
+        <img src="../img/instagram2.jfif" class="w-100" alt="Nuestro Instagram">
       </div>
       <div class="col-md-6 p-4 ps-md-0">
         <h5 class="mt-0 textoinstagram2">Nuestro instagram</h5>
@@ -71,7 +71,7 @@
     </div>
     <div class="row g-0 bg-body-secondary position-relative facebook2">
       <div class="col-md-6 mb-md-0 p-md-4">
-        <img src="../img/facebook2.png" class="w-100" alt="facebook">
+        <img src="../img/facebook2.png" class="w-100" alt="Nuestro Facebook">
       </div>
       <div class="col-md-6 p-4 ps-md-0 ">
         <h5 class="mt-0 textofacebook2">Nuestro facebook</h5>
@@ -97,7 +97,7 @@
   <section>
     <footer>
       <h3 class="textofooter">© Kibua - 2024. Defensa de las y los consumidores.</h3>
-      <img class="tarjetas" src="../img/tarjetas.JPG" alt="tarjetas">
+      <img class="tarjetas" src="../img/tarjetas.JPG" alt="Tarjetas Bancarias">
     </footer>
   </section>
 
